--- a/AndBible/res/values-hr/strings.xml
+++ b/AndBible/res/values-hr/strings.xml
@@ -159,4 +159,4 @@
   <string name="prefs_section_title_title">Section Titles</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <string name="strongs_toggle_button_on">nnnn</string>
-<string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string></resources>
+<string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string><string name="select_text">Select text</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string></resources>
