--- a/AndBible/res/values-pl/strings.xml
+++ b/AndBible/res/values-pl/strings.xml
@@ -7,8 +7,8 @@
 -->
 <resources>
   <string name="app_name">And Bible</string>
-  <string name="splash_top_text">"\n\"I rzekł Bóg: 'Niech stanie się światłość.' I stała się światłość.\"\nRodzaju 1:3"</string>
-  <string name="help_text">"Naciśnij przycisk MENU aby przejść do menu głównego.\n\nAby przejść do następnego lub poprzedniego rozdziału użyj trackball'a \nlub przesuń palcem po ekranie. "</string>
+  <string name="splash_top_text">"\n\"I rzekł Bóg: \'Niech stanie się światłość.\' I stała się światłość.\"\nRodzaju 1:3"</string>
+  <string name="help_text">"Naciśnij przycisk MENU aby przejść do menu głównego.\n\nAby przejść do następnego lub poprzedniego rozdziału użyj trackball\'a \nlub przesuń palcem po ekranie. "</string>
   <string name="help_text_long"><b>Nawigacja</b>\nAby przejść do następnego lub poprzedniego rozdziału użyj trackball\'a \nlub przesuń palcem po ekranie odpowiednio w prawo lub lewo. \n\n<b>Menu</b>\nNaciśnij przycisk MENU aby przejść do menu głównego.\nAby pobrać więcej dokumentów naciśnij Menu / Więcej / Pobierz Dokumenty\n\n<b>Odsłuchiwanie</b>\nAby odsłuchać dany fragment użyj opcji Odsłuchaj\nAby wyłączyć odsłuchiwanie wybierz opcję Odsłuchaj po raz drugi.\nTa opcja nie jest dostępna dla wszystkich wersji językowych. \n\nDłuższe przyciśnięcie wersetu spowoduje wyświetlenie menu kontekstowego dla wersetów.\nDłuższe przyciśnięcie danego dokumentu spowoduje wyświetlenie menu kontekstowego dla dokumentów. \n\n<b>Wyszukiwanie</b>\nSyukana fraza może zawierać znaki specjalne takich jak *,?, AND, OR, NOT (patrz \"Apache Lucene - Query Parser Syntax\")\n\n<b>Ulubione</b>\nWersety można dodawać do ulubionych używając menu kontekstowego dla wersetów. Zarządzanie Ulubionymi odbywa się z menu głównego. Wersety dodane do ulubionych można grupować używając etykiet. \nDłuższe przyciśniecie danego wersetu w sekcji Ulubione spowoduje wyświetlenie menu kontekstowego.</string>
   <string name="version_text">Wersja %s</string>
   <string name="no_sdcard_error">Proszę włożyć kartę SD i ponownie uruchomić And Bible.</string>
@@ -153,4 +153,4 @@
   <string name="prefs_section_title_title">Tytuły sekcji</string>
   <string name="strongs_toggle_button_off">włączony</string>
   <string name="strongs_toggle_button_on">włączony</string>
-<string name="speak_queue">Kolejka</string><string name="speak_repeat">Powtórz</string></resources>
+<string name="speak_queue">Kolejka</string><string name="speak_repeat">Powtórz</string><string name="select_text">Select text</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string></resources>
