--- a/AndBible/res/values-pt/strings.xml
+++ b/AndBible/res/values-pt/strings.xml
@@ -9,7 +9,7 @@
 -->
 <resources>
   <string name="app_name">And Bible</string>
-  <string name="splash_top_text">"\n\"E disse Deus:'Haja luz,' e houve luz.\"\nGenesis 1:3"</string>
+  <string name="splash_top_text">"\n\"E disse Deus:\'Haja luz,\' e houve luz.\"\nGenesis 1:3"</string>
   <string name="help_text">Pressione a tecla MENU para executar as ações\n\nUse o track-ball, os botões direcionais ou toque na tela para avançar ou retroceder os capítulos</string>
   <string name="help_text_long">Navegação\nVá para o próximo capítulo ou o anterior usando o track-ball, os botões direcionais ou toque na tela para avançar ou retroceder \n\nPressione a tecla MENU para executar as ações \n\nFala\nPressione o botão Falar para que o programa leia o capítulo atual\nPressione novamente o botão Falar para parar a leitura \n\nPressione longamente a página da bíblia para abrir o menu com as ações para o respectivo versículo. \nPressione longamente sobre um documento no seletor de documentos para excluir ou ver informações a respeito do documento. \n\nFavoritos\nOs Favoritos podem ser adicionados pressionando longamente sobre os versículos. O Gerenciador dos Favoritos pode ser acessado pelo menu principal. O menu do Gerenciador dos Favoritos permite que os favoritos sejam agrupados, através de marcadores.</string>
   <string name="version_text">Versão %s</string>
@@ -150,4 +150,4 @@
   <string name="prefs_section_title_title">Section Titles</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <string name="strongs_toggle_button_on">nnnn</string>
-<string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string></resources>
+<string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string><string name="select_text">Select text</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string></resources>
