--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -16,6 +16,7 @@
     \nPress the MENU key for actions
     \n\nTo download more documents press Menu/More/Download Documents
     \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading
+    \n\n<b>My Note</b>\nNotes can be added via the My Note menu item on the Verse context menu.  The list of existing notes can be accessed via the main menu.
     \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu.  The Bookmark Manager is accessed via the main menu.  The Bookmark Manager context menu allows bookmarks to be grouped using labels.
     \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see "Apache Lucene - Query Parser Syntax" for more details)
     \n\n<b>Context Menus</b>
@@ -181,7 +182,7 @@
     <string name="mynotes">My Notes</string>
     <string name="mynote">My Note</string>
     <string name="mynote_add">Add My Note</string>
-    <string name="mynote_edit">Edit My Note</string>
+    <string name="mynote_view_edit">My Note</string>
     <string name="mynote_saved">My Note saved</string>
 
     <!-- Document types -->
