--- a/AndBible/res/values-lt/strings.xml
+++ b/AndBible/res/values-lt/strings.xml
@@ -9,7 +9,7 @@
   <string name="app_name">And Bible</string>
   <string name="splash_top_text">"\n\"Dievas tarė, „Teatsiranda šviesa!“ Ir atsirado šviesa.\"\nPradžios 1:3"</string>
   <string name="help_text">Veiksmams atlikti spauskite MENIU mygtuką\n\nKeiskite skyrius naudodami ratuką, D-pad arba braukdami per ekraną pirštu.</string>
-  <string name="help_text_long">"<b>Navigacija</b>\nKeiskite skyrius naudodami ratuką, D-pad arba braukdami pirštu per ekraną. \nDvigubas ekrano palietimas perjungia į viso ekrano veikseną.\n\n<b>MENIU </b>\nĮvairiems veiksmams atlikti spauskite Meniu mygtuką.\n\nNorėdami parsisiųsti daugiau dokumentų spauskite Meniu/Daugiau/Parsiųsti dokumentus \n\n<b>Klausymas</b>\nSpauskite „Klausyti“, norėdami pasiekti dialogą skaitymo pradėjimui ar sustabdymui.\n\n<b>Žymės</b>\nŽymės gali būti pridėtos per eilučių kontekstinį meniu. Žymių tvarkyklė pasiekiama per pagrindinį meniu. Žymių tvarkyklės kontekstinis meniu leidžia grupuoti žymes naudojant korteles.\n\n<b>Paieška</b>\nIeškomas tekstas gali turėti spacialius simbolius *, ?, AND, OR, NOT (norint išsamiau, žiūrėkite \"Apache Lucene - Query Parser Syntax\")\n\n<b>Kontekstinis meniu</b>\nNorėdami atverti kontekstinį meniu pasirinktai eilutei, palaikykite paspaudę ekraną pirštu. \nNorėdami gauti dokumento informaciją arba jį pašalinti, palaikykite paspaudę ant dokumento pirštu. \nNorėdami pasiekti atliktų veiksmų sąrašą, paspauskite ir palaikykite mygtuką „Atgal“.\n\n"</string>
+  <string name="help_text_long">"<b>Navigacija</b>\nKeiskite skyrius naudodami ratuką, D-pad arba braukdami pirštu per ekraną. \nDvigubas ekrano palietimas įjungia ir išjungia viso ekrano veikseną.\n\n<b>MENIU </b>\nĮvairiems veiksmams atlikti spauskite Meniu mygtuką.\n\nNorėdami parsisiųsti daugiau dokumentų spauskite Meniu/Daugiau/Parsiųsti dokumentus \n\n<b>Mano pastabos</b>\nPastabas galima pridėti per „Mano pastabų“ meniu, kuris pasiekiamas iš Rašto eilutės kontekstinio meniu. Visų pastabų sąrašas pasiekiamas per pagrindinį meniu. \n\n<b>Klausymas</b>\nSpauskite „Klausyti“, norėdami pasiekti dialogą skaitymo pradėjimui ar sustabdymui.\n\n<b>Žymės</b>\nŽymės gali būti pridėtos per eilučių kontekstinį meniu. Žymių tvarkyklė pasiekiama per pagrindinį meniu. Žymių tvarkyklės kontekstinis meniu leidžia grupuoti žymes naudojant korteles.\n\n<b>Paieška</b>\nIeškomas tekstas gali turėti spacialius simbolius *, ?, AND, OR, NOT (norint išsamiau, žiūrėkite \"Apache Lucene - Query Parser Syntax\")\n\n<b>Kontekstinis meniu</b>\nNorėdami atverti kontekstinį meniu pasirinktai eilutei, palaikykite paspaudę ekraną pirštu. \nNorėdami gauti dokumento informaciją arba jį pašalinti, palaikykite paspaudę ant dokumento pirštu. \nNorėdami pasiekti atliktų veiksmų sąrašą, paspauskite ir palaikykite mygtuką „Atgal“.\n\n"</string>
   <string name="version_text">Versija %s</string>
   <string name="no_sdcard_error">Prašome įdėti SD kortelę ir iš naujo paleisti And Bible.</string>
   <!-- main menu -->
@@ -51,8 +51,8 @@
   <string name="prefs_show_verseno_summary">Rodyti eilučių numerius</string>
   <string name="prefs_verse_per_line_title">Vienas posmas eilutėje</string>
   <string name="prefs_verse_per_line_summary">Rodyti kiekvieną Biblijos eilutę atskiroje eilutėje</string>
-  <string name="prefs_show_notes_title">Pastabos</string>
-  <string name="prefs_show_notes_summary">Rodyti pastabas</string>
+  <string name="prefs_show_notes_title">Išnašos ir x-nuor.</string>
+  <string name="prefs_show_notes_summary">Rodyti išnašas ir nuorodas</string>
   <string name="prefs_show_strongs_title">Rodyti Strongo numerius</string>
   <string name="prefs_show_strongs_summary">Nuorodos į graikų &amp; hebrajų apibrėžimus</string>
   <string name="prefs_night_mode_title">Naktinė veiksena</string>
@@ -156,4 +156,4 @@
   <string name="prefs_section_title_title">Skyriaus antraštės</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <string name="strongs_toggle_button_on">nnnn</string>
-<string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string><string name="select_text">Select text</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string></resources>
+<string name="speak_queue">Eilė</string><string name="speak_repeat">Kartoti</string><string name="select_text">Pažymėti tekstą</string><string name="select_text_help">Norėdami pažymėti, lėtai traukite.\nTuomet palieskite pažymėtą tekstą, kad jis būtų nukopijuotas.</string><string name="error_no_content">Šiai eilutei nėra teksto</string><string name="mynote">Mano pastaba</string><string name="mynote_add">Pridėti savo pastabą</string><string name="mynote_saved">Mano pastaba išsaugota</string><string name="mynote_view_edit">Mano pastaba</string><string name="mynotes">Mano pastabos</string><string name="prefs_show_mynotes_summary">Su Mano pastaba rodyti piktogramas eilutėse</string><string name="prefs_show_mynotes_title">Rodyti Mano pastabos piktogramas</string><string name="save">Išsaugoti</string><string name="search_results">Ieškoti rezultatų</string></resources>
