--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -210,4 +210,6 @@
     <!-- Errors -->
     <string name="error_occurred">An error has occurred</string>
     <string name="error_no_content">No content for selected verse</string>
+    <string name="error_page_too_large">Page is too large to be loaded</string>
+    <string name="error_key_not_in_document">Not found in document</string>
 </resources>
